--- a/src/Our.Umbraco.InnerContent/Web/UI/App_Plugins/InnerContent/views/innercontent.doctypepicker.html
+++ b/src/Our.Umbraco.InnerContent/Web/UI/App_Plugins/InnerContent/views/innercontent.doctypepicker.html
@@ -34,7 +34,7 @@
                         <span class="list-view-layout__system">({{ item.alias || 'alias' }})</span>
                     </div>
                     <div class="list-view-layout__path">
-                        <input type="text" ng-model="item.displayName" placeholder="display name..." class="-full-width-input" />
+                        <input type="text" ng-model="item.displayName" placeholder="{{item.name}}" class="-full-width-input" />
                     </div>
                     <div class="list-view-layout__path">
                         <input type="text" ng-model="item.nameTemplate" placeholder="name template..." class="-full-width-input" />
